# example-python-monte-carlo-pi

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  NOTICE  README.rst  project_setup.rst  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
ci_for_science/: __init__.py  ci_for_science.py
cpp/: CMakeLists.txt  scientific_module.cpp
cpp/include/: scientific_module.hpp
docs/: Makefile  conf.py  index.rst  make.bat
tests/: test_ci_for_science.py  test_lint.py
